# ligo

./: .gitignore  .gitlab-ci.yml  .ocamlformat  Dockerfile  LICENSE.md  Makefile  Prouf.v  README.md  detect_ctors2.v  dune-project  esy.json  ligo.opam  ligo.opam.locked  ltac_get_all_hyps.v  ltac_hidefalso.v  ltac_mutable_state.v  ltac_noob1.v  ltac_number_goals.v  ltac_obviously1.v  ltac_print_verbose.v  ltac_sandbox.v  ltac_trace.v  ltac_utils.v  makefile  minimal.json  npm-release.sh  pouet.ligo  shell.nix  taco-shop.ligo  test.mligo  test_Prouf.v  test_ltac_get_all_hyps.v  test_ltac_hidefalso.v  test_ltac_mutable_state.v  test_ltac_noob1.v  test_ltac_number_goals.v  test_ltac_obviously1.v  test_ltac_print_verbose.v  test_ltac_sandbox.v  test_ltac_utils.v  (+1 more)
gitlab-pages/docs/: dune
gitlab-pages/docs/advanced/: code-injection.md  entrypoints-contracts.md  entrypoints.md  first-contract.md  include.md  inline.md  interop.md  testing.md  timestamps-addresses.md
gitlab-pages/docs/api/: cheat-sheet.md
gitlab-pages/docs/intro/: editor-support.md  installation.md  what-and-why.md
gitlab-pages/docs/language-basics/: boolean-if-else.md  cheat-sheet.md  exceptions.md  functions.md  loops.md  maps-records.md  math-numbers-tez.md  modules.md  operators.md  sets-lists-touples.md  sets-lists-tuples.md  strings.md  tezos-specific.md  types.md  unit-option-pattern-matching.md  variables-and-constants.md  variables.md  working-with-numbers.md  working-with-strings.md
gitlab-pages/docs/policies/: acceptable-use-policy.md  privacy-policy.md  terms-of-service.md
gitlab-pages/docs/reference/: big_map.md  bitwise.md  bytes.md  crypto.md  current.md  list.md  map.md  operation.md  set.md  string.md  toplevel.md
src/: .ocamlformat  dune  ligo-compile.opam  ligo.ml  ligo.opam  ligo_compile.ml
src/UnionFind/: dune  union_find.ml
src/ast_simplified/: PP.ml  PP.mli  combinators.ml  combinators.mli  misc.ml  misc.mli  types.ml  types.mli
src/ast_typed/: PP.ml  PP.mli  ast_typed.ml  combinators.ml  combinators.mli  combinators_environment.ml  combinators_environment.mli  environment.ml  environment.mli  misc.ml  misc.mli  misc_smart.mli  types.ml
src/compiler/: compiler_environment.mli  compiler_program.mli  compiler_type.mli  uncompiler.ml  uncompiler.mli
src/contracts/: basic.religo  bytes.ligo  bytes.mligo  closure.ligo  counter.religo  lambda-storage.ligo  lambda.religo  lambda3.ligo  letin.religo  match.religo  match_bis.religo  timestamp.ligo  vote.religo
src/coq/: compiler.v  ligo.v
src/environment/: environment.ml  protocols.ml
src/main/: display.ml  display.mli  dune  errors_format.ml  errors_format.mli  main.ml  run_mini_c.mli  run_simplified.ml  run_simplified.mli  run_source.ml  run_source.mli  run_typed.ml  run_typed.mli
src/main/compile/: dune  helpers.ml  interpreter.ml  of_c_unit.ml  of_core.ml  of_imperative.ml  of_michelson.ml  of_mini_c.ml  of_simplified.ml  of_source.ml  of_sugar.ml  of_typed.ml  utils.ml  wrapper.ml
src/main/compiler_options/: compiler_options.ml
src/main/decompile/: dune  formatter.ml  helpers.ml
src/main/fuzz/: dune  fuzz.ml  helpers.ml  monad.ml
src/main/interpreter/: dune  interpreter.ml  interpreter.mli  michelson_backend.ml  monad.ml
src/main/main_errors/: dune  formatter.ml  main_errors.ml  michelson_v1_macros.ml  operation_result.mli  types.ml
src/main/run/: dune  of_michelson.ml  of_simplified.ml  of_source.ml
src/main/scopes/: PP.ml  misc.ml  scopes.ml  types.ml
src/main/uncompile/: dune  uncompile.ml
src/meta_michelson/: alpha_wrap.mli  contract.mli  json.mli  michelson_wrap.mli  misc.mli  streams.mli
src/mini_c/: combinators.mli  environment.ml  environment.mli
src/operators/: helpers.ml  helpers.mli  operators.ml
src/parser/: dune  ligodity.ml  ligodity.mli  pascaligo.ml  pascaligo.mli
src/parser/ligodity/: AST.ml  AST.mli  LexToken.mli  LexToken.mll  Lexer.mll  LexerMain.ml  ParToken.mly  Parser.mly  ParserMain.ml  dune  ligodity.ml
src/parser/pascaligo/: AST.mli  LexToken.mli  LexToken.mll  Parser.mly  dune
src/parser/reasonligo/: LexToken.mli  LexToken.mll  LexerMain.ml  ParToken.mly  Parser.mly  ParserMain.ml  dune  reasonligo.ml
src/parser/shared/: EvalOpt.ml  Lexer.mli  Lexer.mll  dune
src/passes/00-preprocessing/: cameligo.ml  cameligo.mli  dune  jsligo.ml  jsligo.mli  pascaligo.ml  pascaligo.mli  preproc.ml  preprocessing.ml  reasonligo.ml  reasonligo.mli
src/passes/01-lexing/: cameligo.ml  cameligo.mli  dune  jsligo.ml  jsligo.mli  pascaligo.ml  pascaligo.mli  reasonligo.ml  reasonligo.mli
src/passes/01-parsing/: cameligo.ml  cameligo.mli  pascaligo.ml  pascaligo.mli  reasonligo.ml  reasonligo.mli
src/passes/02-parsing/: cameligo.ml  cameligo.mli  dune  parsing.ml  (+4 more)
src/simplify/: ligodity.ml  pascaligo.ml  pascaligo.mli
src/test/: basic_multisig_tests.ml  coase_tests.ml  db_index_assignment_tests.ml  db_index_by_constraint_identifier_tests.ml  db_index_cycle_detection_topological_sort_tests.ml  db_index_grouped_by_variable_tests.ml  db_index_refined_typeclasses_tests.ml  db_index_tests.ml  db_index_tests_common.ml  db_index_typeclasses_constraining_tests.ml  doc_test.ml  dune  hash_lock_tests.ml  heap_tests.ml  heuristic_access_label_tests.ml  heuristic_break_ctor_tests.ml  heuristic_tc_fundep_tests.ml  heuristic_tc_fundep_tests_compare_cleaned.ml  id_tests.ml  id_tests_p.ml  id_tests_r.ml  integration_tests.ml  md_file_tests.ml  multifix_tests.ml  multisig_tests.ml  multisig_v2_tests.ml  mydebugplease.ml  parser_negative_tests.ml  pledge_tests.ml  pledge_tests_m.ml  pledge_tests_p.ml  random_game_tests.ml  repl_test.ml  replaceable_id_tests.ml  sock_tests.ml  test.ml  test_helpers.ml  testing_example.ml  testing_example_cameligo.ml  testing_example_pascaligo.ml  (+8 more)
src/transpiler/: transpiler.ml  transpiler.mli
src/typer/: dune  solver.ml  typer.ml
src/typesystem/: core.ml  dune  shorthands.ml
src/union_find/: Partition.mli  Partition0.ml  Partition1.ml  dune  union_find.ml
vendors/ocaml-sourcemaps/: dune-project  sourcemaps.opam
vendors/ocaml-vlq/: vlq.opam
(+1360 files in other folders)
