opam-version: "1.2"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: ["Marshall Roch <mroch@fb.com>"]
homepage: "https://github.com/flowtype/ocaml-vlq"
doc: "https://github.com/flowtype/ocaml-vlq"
license: "MIT"
dev-repo: "https://github.com/flowtype/ocaml-vlq.git"
bug-reports: "https://github.com/flowtype/ocaml-vlq/issues"
depends:
[
  "dune" {build & >= "2.0"}
  "ounit" {test & >= "2.0.0"}
]
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
