(library
  (name fuzz)
  (public_name ligo.fuzz)
  (libraries
    ligo.fuzz.shared
    ligo.fuzz.cameligo
    ligo.fuzz.reasonligo
    ligo.fuzz.pascaligo
    ligo.fuzz.jsligo
    main_errors
    ligo_compile
    simple-utils
    compiler_options
    qcheck
  )
  (preprocess
    (pps ppx_let bisect_ppx --conditional)
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils -open Tezos_utils ))
)