(library
  (name main_errors)
  (public_name ligo.main_errors)
  (instrumentation (backend bisect_ppx))
  (libraries
    simple-utils
    preprocessing
    parsing
    self_cst
    tree_abstraction
    self_ast_imperative
    purification
    ast_sugar
    self_ast_sugar
    desugaring
    self_ast_core
    inference
    checking
    self_ast_typed
    ligo_interpreter
    spilling
    self_mini_c
    stacking
    self_michelson
    client_utils-008-PtEdo2Zk
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils -open Tezos_utils -open Client_utils_008_PtEdo2Zk))
)
