(ocamllex LexToken)

(menhir
 (merge_into Parser)
 (modules ParToken Parser)
 (flags -la 1 --explain --external-tokens LexToken))

(library
 (name parser_ligodity)
 (public_name ligo.parser.ligodity)
 (modules AST ligodity Parser LexToken)
 (libraries
   parser_shared
   str
   simple-utils
   tezos-utils
   getopt   
 )
 (flags (:standard -open Simple_utils -open Parser_shared ))
)

(executable
  (name LexerMain)
  (libraries 
   parser_ligodity)
  (modules 
    LexerMain
  )
  (flags (:standard -open Parser_shared -open Parser_ligodity))
)

;; Les deux directives (rule) qui suivent sont pour le dev local.
;; Il suffit de faire "dune build Parser.exe" pour avoir un Parser.exe dans le dossier.
;; Pour le purger, il faut faire "dune clean".
;(rule
;  (targets Parser.exe)
;  (deps ParserMain.exe)
;  (action (copy ParserMain.exe Parser.exe))
;  (mode promote-until-clean))

;(rule
;  (targets Lexer.exe)
;  (deps LexerMain.exe)
;  (action (copy LexerMain.exe Lexer.exe))
;  (mode promote-until-clean))
