(ocamllex LexToken)

(library
 (name parser_reasonligo)
 (public_name ligo.parser.reasonligo)
 (modules reasonligo LexToken) ;; TODO Parser ParserLog
 (libraries
   parser_shared
   parser_ligodity
   str
   simple-utils
   tezos-utils
   getopt   
 )
 (flags (:standard -open Simple_utils -open Parser_shared ))
)

(executable
  (name LexerMain)
  (libraries 
   parser_reasonligo)
  (modules 
    LexerMain
  )
  (flags (:standard -open Parser_shared -open Parser_reasonligo))
)