(library
  (name preproc)
  (public_name ligo.preproc)
  (libraries
    ;; Vendors
    Preprocessor
    simple-utils
    ;; LIGO
    preproc_pascaligo
    preproc_cameligo
    preproc_reasonligo
    preproc_shared)
  (modules
     Preproc Pascaligo Cameligo Reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
