(library
  (name preprocessing)
  (public_name ligo.preprocessing)
  (libraries
    ;; Vendors
    Preprocessor
    simple-utils
    ;; LIGO
    preproc_pascaligo
    preproc_cameligo
    preproc_reasonligo
    preproc_shared)
  (modules
     Preprocessing Pascaligo Cameligo Reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
