(library
  (name preprocessing)
  (public_name ligo.preprocessing)
  (libraries
    ;; Vendors
    Preprocessor
    simple-utils
    ;; LIGO
    preprocessing_pascaligo
    preprocessing_cameligo
    preprocessing_reasonligo
    preprocessing_shared)
  (modules
     Preprocessing Pascaligo Cameligo Reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
