;; Build of all LIGO lexers as a library

(library
  (name lexing)
  (public_name ligo.lexing)
  (libraries
     ;; Vendors
     simple-utils
     ;; LIGO
     preprocessing_pascaligo
     preprocessing_cameligo
     preprocessing_reasonligo
     lexing_pascaligo
     lexing_cameligo
     lexing_reasonligo
     lexing_shared)
  (modules
     Lexing Pascaligo Cameligo Reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
