;; Build of all LIGO parsers as a library

(library
  (name parsing)
  (public_name ligo.parsing)
  (libraries
     ;; Vendors
     simple-utils
     ;; LIGO
     parsing_shared
     parsing_pascaligo
     parsing_cameligo
     parsing_reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
