(library
  ; ligo_parser instead of parser to avoid a dune bug
  (name ligo_parser)
  (public_name ligo.ligo_parser)
  (libraries
     Shared_parser
     
     ;; Vendors
     simple-utils
     tezos-utils
     ;; LIGO
     parser_pascaligo
     parser_cameligo
     parser_reasonligo)
  (preprocess
    (pps ppx_let bisect_ppx --conditional)))
