(rule
  (target generated_fold.ml)
  (deps ../adt_generator/generator.raku types.ml)
  (action (with-stdout-to generated_fold.ml (run perl6 ../adt_generator/generator.raku types.ml)))
  (mode (promote (until-clean) (only *)))
)

(library
  (name ast_typed)
  (public_name ligo.ast_typed)
  (libraries
    simple-utils
    tezos-utils
    ast_core ; Is that a good idea?
    stage_common
    adt_generator
    UnionFind
    yojson ppx_deriving_yojson.runtime
  )
  (preprocess
    (pps ppx_let bisect_ppx --conditional ppx_deriving_yojson)
  )
  (flags (:standard -open Simple_utils))
)
