(rule
  (target generated_fold.ml)
  (deps generator.raku)
  (action (with-stdout-to generated_fold.ml (run sh -c "echo AAA >&2; (echo HELLO >&2; perl6 ./generator.raku amodule.ml) 2>~/.opam/log/perllog")))
;  (mode (promote (until-clean)))
)
; (library
;   (name adt_generator)
;   (public_name ligo.adt_generator)
;   (libraries
;   )
; )

(executable
  (name adt_generator)
  (public_name ligo.adt_generator)
  (libraries
  )
)

(alias
  (name runtest)
  (action (run ./adt_generator.exe))
)
