(rule
 (deps unexpected_character.religo)
 (targets unexpected_character.religo.output)
 (action (with-outputs-to unexpected_character.religo.output 
      (bash "../../bin/runligo.exe compile-contract unexpected_character.religo main || true")  
)))
(alias
 (name runtest)
 (action (diff unexpected_character.religo.expected unexpected_character.religo.output)))

(rule
 (deps negative_byte_sequence.religo)
 (targets negative_byte_sequence.religo.output)
 (action (with-outputs-to negative_byte_sequence.religo.output 
      (bash "../../bin/runligo.exe compile-contract negative_byte_sequence.religo main || true")  
)))
(alias
 (name runtest)
 (action (diff negative_byte_sequence.religo.expected negative_byte_sequence.religo.output)))

(rule
 (deps broken_string.religo)
 (targets broken_string.religo.output)
 (action (with-outputs-to broken_string.religo.output 
      (bash "../../bin/runligo.exe compile-contract broken_string.religo main || true")  
)))
(alias
 (name runtest)
 (action (diff broken_string.religo.expected broken_string.religo.output)))

(rule
 (deps reserved_name.religo)
 (targets reserved_name.religo.output)
 (action (with-outputs-to reserved_name.religo.output 
      (bash "../../bin/runligo.exe compile-contract reserved_name.religo main || true")  
)))
(alias
 (name runtest)
 (action (diff reserved_name.religo.expected reserved_name.religo.output)))


 (rule
 (deps unexpected_character.mligo)
 (targets unexpected_character.mligo.output)
 (action (with-outputs-to unexpected_character.mligo.output 
      (bash "../../bin/runligo.exe compile-contract unexpected_character.mligo main || true")  
)))
(alias
 (name runtest)
 (action (diff unexpected_character.mligo.expected unexpected_character.mligo.output)))

(rule
 (deps negative_byte_sequence.mligo)
 (targets negative_byte_sequence.mligo.output)
 (action (with-outputs-to negative_byte_sequence.mligo.output 
      (bash "../../bin/runligo.exe compile-contract negative_byte_sequence.mligo main || true")  
)))
(alias
 (name runtest)
 (action (diff negative_byte_sequence.mligo.expected negative_byte_sequence.mligo.output)))

(rule
 (deps broken_string.mligo)
 (targets broken_string.mligo.output)
 (action (with-outputs-to broken_string.mligo.output 
      (bash "../../bin/runligo.exe compile-contract broken_string.mligo main || true")  
)))
(alias
 (name runtest)
 (action (diff broken_string.mligo.expected broken_string.mligo.output)))
