opam-version: "2.0"
maintainer: "contact@tezos.com"
authors: [ "Tezos devteam" ]
homepage: "https://www.tezos.com/"
bug-reports: "https://gitlab.com/tezos/tezos/issues"
dev-repo: "git+https://gitlab.com/tezos/tezos.git"
license: "MIT"
depends: [
  "dune" { >= "2.0" }
  "tezos-base"
  "tezos-utils"
  "tezos-stdlib-unix"
  "tezos-shell-services"
  "tezos-protocol-environment"
  "tezos-protocol-008-PtEdo2Zk"
  "tezos-protocol-008-PtEdo2Zk-parameters"
  "tezos-memory-proto-alpha"
  # "tezos-client-008-PtEdo2Zk"
  "alcotest-lwt" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
synopsis: "Slim version of tezos client"
