; This library is vendored bits and pieces of the tezos client to reduce footprint

(library
 (name client_utils_008_PtEdo2Zk)
 (public_name client_utils-008-PtEdo2Zk)
 (libraries
  tezos-base
  tezos-stdlib-unix
  tezos-protocol-008-PtEdo2Zk
  tezos-protocol-008-PtEdo2Zk-parameters
  tezos-protocol-environment
  tezos-memory-proto-alpha
  data-encoding
  simple-utils
  tezos-utils
  tezos-shell-services
  tezos-error-monad)
 (flags
  (:standard -open Simple_utils -open Tezos_base__TzPervasives)))
