(library
  (name proto_alpha_utils)
  (public_name proto-alpha-utils)
  (libraries
    tezos-error-monad
    tezos-stdlib-unix
    tezos-protocol-ligo008-PtEdoTez
    tezos-protocol-ligo008-PtEdoTez-parameters
    tezos-client-ligo008-PtEdoTez
    tezos-memory-proto-alpha
    data-encoding
    simple-utils
    tezos-utils
  )
 (flags (:standard -open Simple_utils))
)
