(library
 (name tezos_client_ligo008_PtEdoTez)
 (public_name tezos-client-ligo008-PtEdoTez)
 (libraries tezos-base
            tezos-protocol-ligo008-PtEdoTez
            tezos-shell-services
            tezos-client-base
            tezos-mockup-registration
            tezos-rpc
            tezos-signer-backends
            tezos-protocol-ligo008-PtEdoTez-parameters)
 (library_flags (:standard -linkall))
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_protocol_008_PtEdoTez
                   -open Tezos_protocol_008_PtEdoTez_parameters
                   -open Tezos_rpc)))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
