;; Build of the preprocessor of CameLIGO as a library

(library
  (name preproc_cameligo)
  (public_name ligo.preproc.cameligo)
  (libraries
     ;; Vendors
     Preprocessor)
  (modules Comments File)
  (preprocess
    (pps bisect_ppx --conditional)))

;; Build of a standalone preprocessor for CameLIGO

(executable
  (name PreprocMain)
  (libraries
    ;; LIGO
    preproc_cameligo
    preproc_shared)
  (modules PreprocMain)
  (preprocess
    (pps bisect_ppx --conditional)))
