;; Build of the preprocessor of PascaLIGO as a library

(library
  (name preproc_pascaligo)
  (public_name ligo.preproc.pascaligo)
  (libraries
     ;; Vendors
     Preprocessor)
  (modules Comments File)
  (preprocess
    (pps bisect_ppx --conditional)))

;; Build of a standalone preprocessor for PascaLIGO

(executable
  (name PreprocMain)
  (libraries
    ;; LIGO
    preproc_pascaligo
    preproc_shared)
  (modules PreprocMain)
  (preprocess
    (pps bisect_ppx --conditional)))
