;; Build of the lexer for JsLIGO

(ocamllex Token)

;; Build of the JsLIGO lexer as a library

(library
  (name lexer_jsligo)
  (public_name ligo.lexer.jsligo)
  (modules Token Comments File)
  (libraries
    ;; LIGO
    lexer_shared
    ;; Third party
    str
    hex)
  (preprocess
    (pps bisect_ppx --conditional)))

;; Build of a standalone lexer for JsLIGO

(executable
  (name LexerMain)
  (libraries
    ;; LIGO
    lexer_shared
    lexer_jsligo
    ;; Third party
    str)
  (modules Version LexerMain)
  (preprocess
    (pps bisect_ppx --conditional)))

;; --------------------------------------------------------------------
;; Build of the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action (with-stdout-to
          version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
