;; Build of the lexer by ocamllex

(ocamllex Lexer)

;; Build of the lexer as a library

(library
  (name lexer_shared)
  (public_name ligo.lexing.shared)
  (libraries
     ;; Vendors
     simple-utils
     Preprocessor
     LexerLib
     ;; LIGO
     preprocessing
     ;; Third party
     zarith
     str)
  (modules
     Errors Comments File Token Lexer Self_tokens LexerMainGen)
  (modules_without_implementation
     Token Comments File Self_tokens)
  (preprocess
    (pps bisect_ppx --conditional)))
