;; Build of the lexer by ocamllex

(ocamllex Lexer)

;; Build of the lexer as a library

(library
  (name lexing_shared)
  (public_name ligo.lexing.shared)
  (libraries
     ;; Vendors
     simple-utils
     Preprocessor
     LexerLib
     ;; LIGO
     preprocessing
     ;; Third party
     zarith
     str)
  (modules
     Errors Formatter Comments File Token
     Lexer Self_tokens LexerMainGen UnlexerGen)
  (modules_without_implementation
     Token Comments File Self_tokens)
  (preprocess
    (pps bisect_ppx --conditional)))
