(ocamllex Lexer)

(menhir
 (merge_into Parser)
 (modules ParToken Parser)
 (flags -la 1 --explain --external-tokens LexToken))

(library
 (name lexer_pyligo)
 (public_name ligo.lexer.pyligo)
 (modules Lexer LexToken)
 )

(library
 (name parser_pyligo)
 (public_name ligo.parser.pyligo)
 (modules Parser)
 (libraries
   lexer_pyligo
   hex
   zarith
   simple-utils)
 (flags (:standard -open Simple_utils))
)

(executable 
  (libraries
   lexer_pyligo)
  (modules
    LexerMain)
  (flags (:standard -open Lexer_pyligo))
  (name LexerMain))

(executable
  (libraries
   parser_pyligo)
  (modules
    ParserMain)
  (flags (:standard -open Parser_pyligo))
  (name ParserMain))
