(ocamllex Lexer)

(menhir
 (merge_into Parser)
 (modules ParToken Parser)
 (flags -la 1 --explain --external-tokens Lexer))

(library
 (name parser_pyligo)
 (public_name ligo.parser.pyligo)
 (modules Parser Lexer)
 (libraries
   hex
   zarith
   simple-utils)
 (flags (:standard -open Simple_utils))
)

(executable 
  (name LexerMain)
  (libraries
   parser_pyligo)
  (modules
    LexerMain)
  (flags (:standard -open Parser_pyligo)))

(executable
  (name ParserMain)
  (libraries
   parser_pyligo)
  (modules
    ParserMain)
  (flags (:standard -open Parser_pyligo))
  )
