(library
 (name tezos_protocol_008_PtEdo2Zk_parameters)
 (public_name tezos-protocol-008-PtEdo2Zk-parameters)
 (modules :standard \ gen)
 (libraries tezos-base
            tezos-protocol-environment
            tezos-protocol-008-PtEdo2Zk)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PtEdo2Zk
                   -linkall))
)

(env
 (_
   (env-vars (DYLD_LIBRARY_PATH "/Users/ulrik/.esy/3__________________________________________________________________/i/opam__s__hacl_star_raw-opam__c__0.3.2-084f1567/lib/hacl-star-raw"))))

(executable
 (name gen)
 (libraries bls12-381-unix
            tezos-base
            tezos-protocol-008-PtEdo2Zk-parameters)
 (modules gen)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_protocol_008_PtEdo2Zk_parameters
                   -linkall)))

(rule
 (targets sandbox-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --sandbox)))

(rule
 (targets test-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --test)))

(rule
 (targets mainnet-parameters.json)
 (deps gen.exe)
 (action (run %{deps} --mainnet)))

(install
 (section lib)
 (files sandbox-parameters.json test-parameters.json mainnet-parameters.json))

(rule
 (alias runtest_lint)
 (deps (glob_files *.ml{,i}))
 (action (run %{lib:tezos-tooling:lint.sh} %{deps})))
