(executable
 (name main)
 (libraries tezos-base
            tezos-micheline
            tezos-protocol-environment
            alcotest-lwt
            tezos-005-PsBabyM1-test-helpers
            tezos-stdlib-unix
            bip39
            tezos-protocol-005-PsBabyM1-parameters)
 (flags (:standard -open Tezos_base__TzPervasives
                   -open Tezos_micheline
                   -open Tezos_protocol_005_PsBabyM1
                   -open Tezos_005_PsBabyM1_test_helpers
                   )))

(alias
 (name buildtest)
 (package tezos-protocol-005-PsBabyM1-tests)
 (deps main.exe))

(rule
 (copy %{lib:tezos-protocol-005-PsBabyM1-parameters:test-parameters.json}
       protocol_parameters.json))
