(library
  (name type_variable_instance)
  (public_name ligo.typer_new.type_variable_instance)
  (libraries
    ;; Many of these are unused dependencies
    simple-utils
    tezos-utils
    ast_core
    ast_typed
    predefined
    UnionFind
    environment
    type_variable_abstraction
    solver_types
  )
  (preprocess
    (pps ppx_let)
  )
  (flags (:standard -w +1..62-4-9-44-40-42-48-60-30@39@33 -open Simple_utils ))
)
